--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>What to wear today</title>
+  <title>What to wear today?</title>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-  
+  <div class="header">
+    <h1>What to Wear ToDay?</h1>
+  </div>
+  <hr>
+  <div class="container">
+    <section>
+      <div class="closet">
+      </div>
+      <div class="select-box">
+      </div>
+    </section>
+
+    <section>
+      <div class="closet">
+      </div>
+      <div class="select-box">
+      </div>
+    </section>
+
+    <section>
+      <div class="closet">
+      </div>
+      <div class="select-box">
+      </div>
+    </section>
+  </div>
+
+
 </body>
 </html>
