--- a/index.html
+++ b/index.html
@@ -13,27 +13,28 @@
     <h1>What to Wear ToDay?</h1>
   </div>
   <hr>
-  <div class="container">
+  <div class="closet-container">
     <section>
       <div class="closet">
-      </div>
-      <div class="select-box">
       </div>
     </section>
 
     <section>
       <div class="closet">
       </div>
-      <div class="select-box">
-      </div>
     </section>
 
     <section>
       <div class="closet">
       </div>
-      <div class="select-box">
-      </div>
     </section>
+  </div>
+
+  <div class="select-box">
+    <div class="select"></div>
+    <div class="select"></div>
+    <div class="select"></div>
+    <button class="make-button">make new look</button>
   </div>
 
 
