--- a/index.html
+++ b/index.html
@@ -16,16 +16,70 @@
   <div class="closet-container">
     <section>
       <div class="closet">
+        <div class="cloth">
+          <img src="images/outer1.JPG">
+          <h3>네이비 가디건</h3>
+          <p>98도씨</p>
+        </div>
+        <div class="cloth">
+          <img src="images/outer2.JPG">
+          <h3>아이보리 린넨 자켓</h3>
+          <p>로엠</p>
+        </div>
+        <div class="cloth">
+          <img src="images/outer3.JPG">
+          <h3>연회색 가디건</h3>
+          <p>슬로우앤드</p>
+        </div>
+        <div class="cloth">
+          <img src="images/outer4.JPG">
+          <h3>아이보리가디건</h3>
+          <p>슬로우앤드</p>
+        </div>
+        <!-- <input type="file"
+       id="avatar" name="avatar"
+       accept="image/png, image/jpeg"> -->
       </div>
     </section>
 
     <section>
       <div class="closet">
+        <div class="cloth">
+          <img src="images/top1.JPG">
+          <h3>타이다이크롭티</h3>
+          <p>closeclip</p>
+        </div>
+        <div class="cloth">
+          <img src="images/top2.JPG">
+          <h3>네이비 긴팔</h3>
+          <p>98도씨</p>
+        </div>
+        <div class="cloth">
+          <img src="images/top3.JPG">
+          <h3>올리브 긴팔</h3>
+          <p>98도씨</p>
+        </div>
+        <div class="cloth">
+          <img src="images/top4.JPG">
+          <h3>고양이 검은색 반팔</h3>
+          <p>스컬프터</p>
+        </div>
+
       </div>
     </section>
 
     <section>
       <div class="closet">
+        <div class="cloth">
+          <img src="images/bottom1.JPG">  
+          <h3>아이보리 핀턱 팬츠</h3>
+          <p>데일리쥬</p>
+        </div>
+        <div class="cloth">
+          <img src="images/bottom2.JPG">  
+          <h3>흑청 데님 롱스커트</h3>
+          <p>지민언니</p>
+        </div>
       </div>
     </section>
   </div>
@@ -34,7 +88,7 @@
     <div class="select"></div>
     <div class="select"></div>
     <div class="select"></div>
-    <button class="make-button">make new look</button>
+    <button class="create-button">create</button>
   </div>
 
 
