--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
           <h3>아이보리가디건</h3>
           <p>슬로우앤드</p>
         </div>
+        <div class="cloth">
+          <img src="images/outer1.JPG">
+          <h3>네이비 가디건</h3>
+          <p>98도씨</p>
+        </div>
         <!-- <input type="file"
        id="avatar" name="avatar"
        accept="image/png, image/jpeg"> -->
@@ -63,6 +68,11 @@
           <img src="images/top4.JPG">
           <h3>고양이 검은색 반팔</h3>
           <p>스컬프터</p>
+        </div>
+        <div class="cloth">
+          <img src="images/top5.JPG">
+          <h3>하늘색 폴로 크롭티</h3>
+          <p>ZARA</p>
         </div>
 
       </div>
