try to upload images

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>What to wear today?</title>
   <link rel="stylesheet" href="style.css">
-
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
+  <script></script>
   <div class="header">
     <h1>What to Wear ToDay?</h1>
   </div>
@@ -36,15 +37,13 @@
           <h3>아이보리가디건</h3>
           <p>슬로우앤드</p>
         </div>
-        <div class="cloth">
+        <!-- <div class="cloth">
           <img src="images/outer1.JPG">
           <h3>네이비 가디건</h3>
           <p>98도씨</p>
-        </div>
-        <!-- <input type="file"
-       id="avatar" name="avatar"
-       accept="image/png, image/jpeg"> -->
+        </div> -->
       </div>
+      <input type="file" id="input-file" name="input-file" accept="image/png, image/jpeg">
     </section>
 
     <section>
