java environment setting

--- a/index.html
+++ b/index.html
@@ -37,15 +37,10 @@
           <h3>아이보리가디건</h3>
           <p>슬로우앤드</p>
         </div>
-        <!-- <div class="cloth">
-          <img src="images/outer1.JPG">
-          <h3>네이비 가디건</h3>
-          <p>98도씨</p>
-        </div> -->
-      </div>
-      <input type="file" id="input-file" name="input-file" accept="image/png, image/jpeg">
+        <div class="add-cloth cloth">
+          <input type="file" id="input-file" name="input-file" accept="image/png, image/jpeg">
+        </div>1
     </section>
-
     <section>
       <div class="closet">
         <div class="cloth">
